internal static class AnimationStrings{
    public const string isMoving = "isMoving";
    internal const string isRunning = "isRunning";
    internal const string isGrounded = "isGrounded";
    internal const string yVelocity = "yVelocity";
    internal const string jumpTrigger = "jump";
    internal const string isOnWall = "isOnWall";
    internal const string isOnCeiling = "isOnCeiling";
    internal const string attackTrigger = "attack";
    internal const string canMove = "canMove";
    internal const string hasTarget = "hasTarget";
    internal const string isAlive = "isAlive";
    internal const string isHit = "isHit";
    internal const string hitTrigger = "hit";
    internal const string lockVelocity = "lockVelocity";
    internal const string attackCooldown = "attackCooldown";
    internal const string rangedAttackTrigger = "rangedAttack";
}